Fixed spacing on icon bullet

--- a/styleguide/source/assets/scss/02-molecules/_action-step.scss
+++ b/styleguide/source/assets/scss/02-molecules/_action-step.scss
@@ -5,7 +5,7 @@
 
   &__icon {
     position: absolute;
-      top: .5rem;
+      top: 0;
       left: 0;
   }
 
